--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
       <pre><code>pip3 install -r requirements.txt
 python3 webp_converter.py</code></pre>
 
-      <h2 style="margin-top:28px;">Used in Production</h2>
+      <h2 style="margin-top:28px;">Используется в работе</h2>
 
       <p>
-        This tool is actively used in internal publishing workflows for image
-        optimization and structured WebP processing.
+        Программа активно используется во внутренних процессах публикации
+  для оптимизации изображений и структурированной обработки WebP-файлов.
       </p>
 
       <div class="row">
         <a class="btn" href="https://kroppa.ru/" target="_blank" rel="noopener">
-          Example Website – Kroppa.ru
+          Kroppa.ru
         </a>
       </div>
 
